# enda

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Conanfile.py  Pipfile  conanfile.py
Benchmarks/: BenchCommon.hpp  CMakeLists.txt  ForStatic.cpp  IteratorForeach.cpp
Doc/: memory_alloclate.md
Source/: Accessors.hpp  Algorithms.hpp  Arithmetic.hpp  ArrayAdapter.hpp  BasicArray.hpp  BasicArrayView.hpp  BasicFunctions.hpp  CMakeLists.txt  Concepts.hpp  Declarations.hpp  Device.hpp  Enda.hpp  Exceptions.hpp  GroupIndices.hpp  ImplBasicArrayViewCommon.hpp  Iterators.hpp  Layout.hpp  LayoutTransforms.hpp  Macros.hpp  Map.hpp  MappedFunctions.hpp  MatrixFunctions.hpp  Mem.hpp  Print.hpp  Singleton.hpp  Stdutil.hpp  SymGrp.hpp  Traits.hpp  Utility.hpp  Version.hpp.in  concepts.hpp  device.hpp  exceptions.hpp  macros.hpp  test.cpp  traits.hpp
Source/Itertools/: Accumulate.hpp  Chain.hpp  Combinations.hpp  CombinationsWithReplacement.hpp  Compress.hpp  Count.hpp  Cycle.hpp  Dropwhile.hpp  Enumerate.hpp  Filter.hpp  Filterfalse.hpp  Groupby.hpp  Islice.hpp  IteratorFacade.hpp  Itertools.hpp  Permutations.hpp  Product.hpp  Range.hpp  RangeView.hpp  Range_view.hpp  Repeat.hpp  Sentinel.hpp  Slice.hpp  Starmap.hpp  Stride.hpp  Takewhile.hpp  Tee.hpp  Transform.hpp  Utils.hpp  Zip.hpp  ZipLongest.hpp  Zip_longest.hpp  chain.hpp  combinations.hpp  combinations_with_replacement.hpp  compress.hpp  dropwhile.hpp  filter.hpp  groupby.hpp  itertools.hpp  (+4 more)
Source/Layout/: BoundCheckWorker.hpp  Bound_check_worker.hpp  ForEach.hpp  IdxMap.hpp  Padding.hpp  Permutation.hpp  Policies.hpp  Range.hpp  RectStr.hpp  SliceStatic.hpp
Source/Mem/: AddressSpace.hpp  Allocators.hpp  BoostMemoryPool.hpp  ConcurrentBitset.hpp  Handle.hpp  Malloc.hpp  Memset.hpp  Policies.hpp  SingletonPool.hpp  allocators.hpp  malloc.hpp  memcpy.hpp  numa.hpp
Source/StdUtil/: Array.hpp  Complex.hpp  Concepts.hpp  concepts.hpp
Test/: ArithmeticUT.cpp  BasicArrayUT.cpp  BasicArrayViewUT.cpp  BasicFunctionsUT.cpp  CMakeLists.txt  EllipsisUT.cpp  GroupIndicesUT.cpp  GtestTools.hpp  ImplBasicArrayViewCommonUT.cpp  IteratorsUT.cpp  MatrixFunctionsUT.cpp  PrintUT.cpp  StackArrayUT.cpp  TestCommon.hpp  TraitsUT.cpp
Test/Itertools/: AccumulateUT.cpp  ChainUT.cpp  CombinationsUT.cpp  CombinationsWithReplacementUT.cpp  CompressUT.cpp  CountUT.cpp  CycleUT.cpp  DropwhileUT.cpp  FilterUT.cpp  FilterfalseUT.cpp  GroupbyUT.cpp  IsliceUT.cpp  ItertoolsUT.cpp  PermutationsUT.cpp  ProductUT.cpp  RangeUT.cpp  RangeViewUT.cpp  RepeatUT.cpp  StarmapUT.cpp  TakewhileUT.cpp  TeeUT.cpp  ZipLongestUT.cpp  ZipUT.cpp
Test/Layout/: IdxMapUT.cpp  PaddingUT.cpp  PermutationUT.cpp
Test/Mem/: AllocatorsUT.cpp  ConcurrentBitsetUT.cpp  HandleUT.cpp  MallocUT.cpp  MemcpyUT.cpp  MemoryPoolPerformanceUT.cpp  MemsetUT.cpp  SingletonPoolUT.cpp
Test/StdUtil/: ArrayUT.cpp  ComplexUT.cpp
